--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "gatsby-plugin-typescript": "^2.0.9",
+    "gatsby-plugin-typescript-checker": "^1.0.3",
+    "reactstrap": "^7.1.0",
+    "typescript": "^3.3.3333"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@types/react": "^16.8.6",
+    "@types/reactstrap": "^7.1.3",
     "prettier": "^1.18.2"
   },
   "keywords": [
