--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.9.0",
+    "gatsby": "^2.13.6",
     "gatsby-image": "^2.1.3",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.3",
+    "gatsby-plugin-typescript": "^2.0.9",
+    "gatsby-plugin-typescript-checker": "^1.0.3",
     "gatsby-source-filesystem": "^2.0.39",
     "gatsby-transformer-sharp": "^2.1.21",
-    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "gatsby-plugin-typescript": "^2.0.9",
-    "gatsby-plugin-typescript-checker": "^1.0.3",
-    "reactstrap": "^7.1.0",
-    "typescript": "^3.3.3333"
+    "reactstrap": "^8.0.0",
+    "typescript": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@types/react": "^16.8.6",
+    "@types/react-helmet": "^5.0.8",
     "@types/reactstrap": "^7.1.3",
     "prettier": "^1.18.2"
   },
