--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/react": "^16.8.6",
     "@types/react-helmet": "^5.0.8",
     "@types/reactstrap": "^7.1.3",
+    "husky": ">=1",
+    "lint-staged": ">=8",
     "prettier": "^1.18.2"
   },
   "keywords": [
@@ -46,5 +48,16 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
