--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
-    "@types/react": "^16.9.2",
+    "@types/react": "^16.8.19",
     "@types/react-helmet": "^5.0.10",
     "@types/reactstrap": "^8.0.4",
     "husky": ">=1",
     "lint-staged": ">=8",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "webpack": "^4.40.2"
   },
   "keywords": [
     "gatsby"
