--- a/package.json
+++ b/package.json
@@ -6,31 +6,31 @@
   "author": "Eric McKay",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "gatsby": "^2.15.20",
-    "gatsby-image": "^2.2.20",
-    "gatsby-plugin-manifest": "^2.2.18",
-    "gatsby-plugin-offline": "^3.0.8",
-    "gatsby-plugin-react-helmet": "^3.1.8",
-    "gatsby-plugin-sass": "^2.1.15",
-    "gatsby-plugin-sharp": "^2.2.25",
-    "gatsby-plugin-typescript": "^2.1.9",
+    "gatsby": "^2.17.7",
+    "gatsby-image": "^2.2.30",
+    "gatsby-plugin-manifest": "^2.2.26",
+    "gatsby-plugin-offline": "^3.0.17",
+    "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-sass": "^2.1.20",
+    "gatsby-plugin-sharp": "^2.2.36",
+    "gatsby-plugin-typescript": "^2.1.15",
     "gatsby-plugin-typescript-checker": "^1.1.1",
-    "gatsby-source-filesystem": "^2.1.26",
-    "gatsby-transformer-sharp": "^2.2.16",
-    "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-sharp": "^2.3.2",
+    "node-sass": "^4.13.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
-    "reactstrap": "^8.0.0",
-    "typescript": "^3.6.3"
+    "reactstrap": "^8.1.1",
+    "typescript": "^3.6.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@types/react": "^16.9.2",
-    "@types/react-helmet": "^5.0.10",
-    "@types/reactstrap": "^8.0.4",
-    "husky": ">=1",
-    "lint-staged": ">=8",
+    "@babel/core": "^7.6.4",
+    "@types/react": "^16.9.11",
+    "@types/react-helmet": "^5.0.13",
+    "@types/reactstrap": "^8.0.6",
+    "husky": "^3.0.9",
+    "lint-staged": "^9.4.2",
     "prettier": "^1.18.2"
   },
   "keywords": [
