--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Eric McKay",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "gatsby": "^2.17.7",
+    "gatsby": "^2.24.11",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-offline": "^3.0.17",
@@ -17,21 +17,23 @@
     "gatsby-plugin-typescript-checker": "^1.1.1",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.2",
-    "node-sass": "^4.13.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
-    "reactstrap": "^8.1.1",
-    "typescript": "^3.6.4"
+    "reactstrap": "^8.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
-    "@types/react": "^16.9.11",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^5.0.13",
-    "@types/reactstrap": "^8.0.6",
+    "@types/reactstrap": "^8.5.0",
     "husky": "^4.0.10",
     "lint-staged": "^10.0.1",
-    "prettier": "^1.18.2"
+    "node-sass": "^4.13.0",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.0"
   },
   "keywords": [
     "gatsby"
@@ -43,13 +45,6 @@
     "start": "yarn develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "husky": {
     "hooks": {
